--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -17,8 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Run tests
-      run: cd rust-lib
-        | cargo test --verbose
+      run: |
+        cd rust-lib
+        cargo test --verbose
     - name: Build
-      run: cd rust-lib
-        | cargo build --verbose --release
+      run: |
+        cd rust-lib
+        cargo build --verbose --release
