--- a/rust-lib/Cargo.toml
+++ b/rust-lib/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.
 
 [dependencies]
-godot = "0.2.4"
+godot = {version = "0.2.4", features = ["experimental-wasm", "lazy-function-tables"]}
