--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -1,3 +1,4 @@
+
 name: Rust
 
 on:
@@ -27,11 +28,14 @@ jobs:
         cd emsdk
         ./emsdk install 3.1.62
         ./emsdk activate 3.1.62
+    - name: Build
+      run: |
+        cd emsdk
+        source "emsdk_env.sh"
+        cd ../
+        cd rust-lib
+        cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --release --verbose
     - name: Run tests
       run: |
         cd rust-lib
         cargo test --verbose
-    - name: Build
-      run: |
-        cd rust-lib
-        cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --release
