--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -34,7 +34,7 @@ jobs:
         source "emsdk_env.sh"
         cd ../
         cd rust-lib
-        cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --verbose
+        cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --release --verbose
     - name: Run tests
       run: |
         cd rust-lib
