--- a/rust-lib/.cargo/config.toml
+++ b/rust-lib/.cargo/config.toml
@@ -2,5 +2,6 @@
 rustflags = [
     "-C", "link-args=-sSIDE_MODULE=2",
     "-Zlink-native-libraries=no",
+    "-C", "target-feature=+bulk-memory",
     "-Cllvm-args=-enable-emscripten-cxx-exceptions=0",
 ]
