--- a/.github/workflows/godot-ci-rust.yml
+++ b/.github/workflows/godot-ci-rust.yml
@@ -70,6 +70,7 @@ jobs:
     
   export-web:
     name: Web Export
+    needs: build-rust-wasm32
     runs-on: ubuntu-22.04  # Use 22.04 with godot 4
     container:
       image: barichello/godot-ci:4.4.1
@@ -83,10 +84,12 @@ jobs:
           mkdir -v -p ~/.local/share/godot/export_templates/
           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
       - name: Pull rust-lib
-        needs: build-rust-wasm32
         uses: actions/download-artifact@v4
         with:
           name: rust-lib
+      - name: Move rust-lib
+        run: |
+          mv rust_lib.wasm ./rust-lib/target/wasm32-unknown-emscripten/debug/rust_lib.wasm
       - name: Web Build
         run: |
           mkdir -v -p build/web
