I hate my life.

--- a/.github/workflows/godot-ci-rust.yml
+++ b/.github/workflows/godot-ci-rust.yml
@@ -89,7 +89,7 @@ jobs:
           name: rust-lib
       - name: Move rust-lib
         run: |
-          mv rust_lib.wasm ./rust-lib/target/wasm32-unknown-emscripten/debug/rust_lib.wasm
+          mv ./rust_lib.wasm ./rust-lib/target/wasm32-unknown-emscripten/debug/rust_lib.wasm
       - name: Web Build
         run: |
           mkdir -v -p build/web
