--- a/.github/workflows/godot-ci-rust.yml
+++ b/.github/workflows/godot-ci-rust.yml
@@ -79,16 +79,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-      - name: Pull rust-lib
-        uses: actions/download-artifact@v4
-        with:
-          name: rust-lib
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+      - name: Pull rust-lib
+        uses: actions/download-artifact@v4
+        with:
+          name: rust-lib
       - name: Move rust-lib
         run: |
+          mkdir ./rust-lib/target/wasm32-unknown-emscripten/debug/
           mv ./rust_lib.wasm ./rust-lib/target/wasm32-unknown-emscripten/debug/rust_lib.wasm
       - name: Web Build
         run: |
