--- a/.github/workflows/godot-ci-rust.yml
+++ b/.github/workflows/godot-ci-rust.yml
@@ -49,15 +49,15 @@ jobs:
       run: |
         git clone https://github.com/emscripten-core/emsdk.git
         cd emsdk
-        ./emsdk install 3.1.62
-        ./emsdk activate 3.1.62
+        ./emsdk install 3.1.39
+        ./emsdk activate 3.1.39
     - name: Build
       run: |
         cd emsdk
         source "emsdk_env.sh"
         cd ../
         cd rust-lib
-        cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --verbose
+        cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --verbose --release
     - name: Run tests
       run: |
         cd rust-lib
@@ -89,9 +89,7 @@ jobs:
           name: rust-lib
       - name: Move rust-lib
         run: |
-          mkdir -p ./rust-lib/target/wasm32-unknown-emscripten/debug/
           mkdir -p ./rust-lib/target/wasm32-unknown-emscripten/release/
-          cp ./rust_lib.wasm ./rust-lib/target/wasm32-unknown-emscripten/debug/rust_lib.
           mv ./rust_lib.wasm ./rust-lib/target/wasm32-unknown-emscripten/release/rust_lib.
       - name: Web Build
         run: |
