--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -51,12 +51,12 @@ jobs:
         cd emsdk
         ./emsdk install 3.1.62
         ./emsdk activate 3.1.62
-        source ./emsdk.sh
+        source "./emsdk.sh"
     - name: Build
       run: |
         cd emsdk
         source "emsdk_env.sh"
-        source ./emsdk.sh
+        source "./emsdk.sh"
         cd ../
         cd rust-lib
         cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --verbose
