I don't know if I have the ability to set env variables but sure here goes

--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -40,24 +40,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: setup nightly toolchain
-      run: |
-        rustup toolchain install nightly
-        rustup component add rust-src --toolchain nightly
-        rustup target add wasm32-unknown-emscripten --toolchain nightly
     - name: setup emsdk
       run: |
         git clone https://github.com/emscripten-core/emsdk.git
         cd emsdk
         ./emsdk install 3.1.62
         ./emsdk activate 3.1.62
-        source "./emsdk.sh"
+        echo 'source "./emsdk_env.sh"' >> $HOME/.bash_profile
+    - name: setup nightly toolchain
+      run: |
+        rustup toolchain install nightly
+        rustup component add rust-src --toolchain nightly
+        rustup target add wasm32-unknown-emscripten --toolchain nightly
     - name: Build
       run: |
-        cd emsdk
-        source "emsdk_env.sh"
-        source "./emsdk.sh"
-        cd ../
         cd rust-lib
         cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --verbose
     - name: Run tests
