--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -37,7 +37,7 @@ env:
 
 jobs:
   build-rust-wasm32:
-    runs-on: ubuntu-22.04
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
     - name: setup emsdk
