--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -64,6 +64,11 @@ jobs:
       if: matrix.release_for == 'web-wasm32'
       run: emcc -v
 
+    - name: build rust
+      run: cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --release
+      dir: "./rust-lib"
+      env: 
+        RUSTFLAGS: -C link-args=-sSIDE_MODULE=2 -C target-feature=+atomics,+bulk-memory,+mutable-globals -Zlink-native-libraries=no -Cllvm-args=-enable-emscripten-cxx-exceptions=0
     - name: Run tests
       run: |
         cd rust-lib
