--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -54,19 +54,13 @@ jobs:
       with:
         targets: wasm32-unknown-emscripten
 
-    - name: Install Nightly
-      run: |
-        rustup toolchain install nightly
-        rustup component add rust-src --toolchain nightly
-        rustup target add  --toolchain nightly
-
     - name: Verify Emscripten
       if: matrix.release_for == 'web-wasm32'
       run: emcc -v
 
     - name: build rust
       run: cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --release
-      dir: "./rust-lib"
+      dir: ./rust-lib
       env: 
         RUSTFLAGS: -C link-args=-sSIDE_MODULE=2 -C target-feature=+atomics,+bulk-memory,+mutable-globals -Zlink-native-libraries=no -Cllvm-args=-enable-emscripten-cxx-exceptions=0
     - name: Run tests
