--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -60,7 +60,7 @@ jobs:
 
     - name: build rust
       run: cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --release
-      dir: ./rust-lib
+      working-directory: ./rust-lib
       env: 
         RUSTFLAGS: -C link-args=-sSIDE_MODULE=2 -C target-feature=+atomics,+bulk-memory,+mutable-globals -Zlink-native-libraries=no -Cllvm-args=-enable-emscripten-cxx-exceptions=0
     - name: Run tests
