--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -82,6 +82,10 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
       with:
         targets: x86_64-unknown-linux-gnu
+    
+    - name: Install Nightly
+      run: |
+        rustup toolchain install
 
     - name: build rust
       run: cargo build --release
