--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -78,15 +78,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Install Stable
+    - name: Install Stable Download
       uses: dtolnay/rust-toolchain@stable
       with:
         targets: x86_64-unknown-linux-gnu
     
-    - name: Install Nightly
+    - name: Install Stable
       run: |
         rustup toolchain install
-        rustup component add rust-src --toolchain
+        rustup component add rust-src --toolchain stable
+        rustup target add x86_64-unknown-linux-gnu stable
 
     - name: build rust
       run: cargo build --release
