--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -77,20 +77,11 @@ jobs:
   build-rust-linux:
     runs-on: ubuntu-latest
     steps:
-
-    - name: Install Stable Download
-      uses: dtolnay/rust-toolchain@stable
-      with:
-        targets: x86_64-unknown-linux-gnu
-    
-    - name: Install Stable
-      run: |
-        rustup toolchain install
-        rustup target add x86_64-unknown-linux-gnu stable
-
-    - name: build rust
-      run: cargo build --release
-      working-directory: ./rust-lib
+    - uses: actions/checkout@v4
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
 
     - name: upload rust-lib
       uses: actions/upload-artifact@v4
