--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -80,8 +80,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
+      working-directory: ./rust-lib
     - name: Run tests
       run: cargo test --verbose
+      working-directory: ./rust-lib
 
     - name: upload rust-lib
       uses: actions/upload-artifact@v4
