--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -79,10 +79,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --release
       working-directory: ./rust-lib
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
       working-directory: ./rust-lib
 
     - name: upload rust-lib
