--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -94,6 +94,7 @@ jobs:
   export-web:
     name: Web Export
     needs: build-rust-wasm32
+    needs: build-rust-linux
     runs-on: ubuntu-22.04  # Use 22.04 with godot 4
     container:
       image: barichello/godot-ci:4.4.1
