--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -64,15 +64,15 @@ jobs:
 
     - name: build rust
       run: cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --release
-      working-directory: ./rust-lib
+      working-directory: ./tileset-celluar-automata
       env: 
         RUSTFLAGS: -C link-args=-sSIDE_MODULE=2 -C target-feature=+bulk-memory,+mutable-globals -Zlink-native-libraries=no -Cllvm-args=-enable-emscripten-cxx-exceptions=0
     # borrowed code end
-    - name: upload rust-lib
+    - name: upload tileset-celluar-automata
       uses: actions/upload-artifact@v4
       with:
-        name: rust-lib-wasm32
-        path: ./rust-lib/target/wasm32-unknown-emscripten/release/rust_lib.wasm
+        name: tileset-celluar-automata-wasm32
+        path: ./tileset-celluar-automata/target/wasm32-unknown-emscripten/release/tileset_celluar_automata.wasm
     
   build-rust-linux:
     runs-on: ubuntu-latest
@@ -80,16 +80,16 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --release
-      working-directory: ./rust-lib
+      working-directory: ./tileset-celluar-automata
     - name: Run tests
       run: cargo test
-      working-directory: ./rust-lib
+      working-directory: ./tileset-celluar-automata
 
-    - name: upload rust-lib
+    - name: upload tileset-celluar-automata
       uses: actions/upload-artifact@v4
       with:
-        name: rust-lib-linux-build-only
-        path: ./rust-lib/target/release/librust_lib.so
+        name: tileset-celluar-automata-linux-build-only
+        path: ./tileset-celluar-automata/target/release/libtileset_celluar_automata.so
     
   export-web:
     name: Web Export
@@ -106,22 +106,22 @@ jobs:
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
-      - name: Pull rust-lib-wasm32
+      - name: Pull tileset-celluar-automata-wasm32
         uses: actions/download-artifact@v4
         with:
-          name: rust-lib-wasm32
-      - name: Move rust-lib-wasm32
+          name: tileset-celluar-automata-wasm32
+      - name: Move tileset-celluar-automata-wasm32
         run: |
-          mkdir -p ./rust-lib/target/wasm32-unknown-emscripten/release/
-          mv ./rust_lib.wasm ./rust-lib/target/wasm32-unknown-emscripten/release/rust_lib.wasm
-      - name: Pull rust-lib-linux-build-only
+          mkdir -p ./tileset-celluar-automata/target/wasm32-unknown-emscripten/release/
+          mv ./tileset_celluar_automata.wasm ./tileset-celluar-automata/target/wasm32-unknown-emscripten/release/tileset_celluar_automata.wasm
+      - name: Pull tileset-celluar-automata-linux-build-only
         uses: actions/download-artifact@v4
         with:
-          name: rust-lib-linux-build-only
-      - name: Move rust-lib-linux-build-only
+          name: tileset-celluar-automata-linux-build-only
+      - name: Move tileset-celluar-automata-linux-build-only
         run: |
-          mkdir -p ./rust-lib/target/release
-          mv ./librust_lib.so ./rust-lib/target/release/librust_lib.so
+          mkdir -p ./tileset-celluar-automata/target/release
+          mv ./libtileset_celluar_automata.so ./tileset-celluar-automata/target/release/libtileset_celluar_automata.so
       - name: Web Build
         run: |
           mkdir -v -p build/web
