--- a/.github/workflows/godot-ci-web-rust.yml
+++ b/.github/workflows/godot-ci-web-rust.yml
@@ -32,8 +32,9 @@ permissions:
 
 env:
   GODOT_VERSION: 4.4.1
-  EXPORT_NAME: balance-prototype
+  EXPORT_NAME: replanting-game
   PROJECT_PATH: ./
+  RUST_PATH: ./tileset-celluar-automata
 
 jobs:
   build-rust-wasm32:
@@ -64,7 +65,7 @@ jobs:
 
     - name: build rust
       run: cargo +nightly build --features nothreads -Zbuild-std --target wasm32-unknown-emscripten --release
-      working-directory: ./tileset-celluar-automata
+      working-directory: ${RUST_PATH}
       env: 
         RUSTFLAGS: -C link-args=-sSIDE_MODULE=2 -C target-feature=+bulk-memory,+mutable-globals -Zlink-native-libraries=no -Cllvm-args=-enable-emscripten-cxx-exceptions=0
     # borrowed code end
@@ -72,7 +73,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: tileset-celluar-automata-wasm32
-        path: ./tileset-celluar-automata/target/wasm32-unknown-emscripten/release/tileset_celluar_automata.wasm
+        path: ${RUST_PATH}/target/wasm32-unknown-emscripten/release/tileset_celluar_automata.wasm
     
   build-rust-linux:
     runs-on: ubuntu-latest
@@ -80,16 +81,16 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --release
-      working-directory: ./tileset-celluar-automata
+      working-directory: ${RUST_PATH}
     - name: Run tests
       run: cargo test
-      working-directory: ./tileset-celluar-automata
+      working-directory: ${RUST_PATH}
 
     - name: upload tileset-celluar-automata
       uses: actions/upload-artifact@v4
       with:
         name: tileset-celluar-automata-linux-build-only
-        path: ./tileset-celluar-automata/target/release/libtileset_celluar_automata.so
+        path: ${RUST_PATH}/target/release/libtileset_celluar_automata.so
     
   export-web:
     name: Web Export
@@ -112,16 +113,16 @@ jobs:
           name: tileset-celluar-automata-wasm32
       - name: Move tileset-celluar-automata-wasm32
         run: |
-          mkdir -p ./tileset-celluar-automata/target/wasm32-unknown-emscripten/release/
-          mv ./tileset_celluar_automata.wasm ./tileset-celluar-automata/target/wasm32-unknown-emscripten/release/tileset_celluar_automata.wasm
+          mkdir -p ${RUST_PATH}/target/wasm32-unknown-emscripten/release/
+          mv ./tileset_celluar_automata.wasm ${RUST_PATH}/target/wasm32-unknown-emscripten/release/tileset_celluar_automata.wasm
       - name: Pull tileset-celluar-automata-linux-build-only
         uses: actions/download-artifact@v4
         with:
           name: tileset-celluar-automata-linux-build-only
       - name: Move tileset-celluar-automata-linux-build-only
         run: |
-          mkdir -p ./tileset-celluar-automata/target/release
-          mv ./libtileset_celluar_automata.so ./tileset-celluar-automata/target/release/libtileset_celluar_automata.so
+          mkdir -p ${RUST_PATH}/target/release
+          mv ./libtileset_celluar_automata.so ${RUST_PATH}/target/release/libtileset_celluar_automata.so
       - name: Web Build
         run: |
           mkdir -v -p build/web
